# luminist

./: .env.example  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  data.py  main.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
react_vector_store/: index.faiss  index.pkl
scripts/: clean_raw.py  extract_raw.py  load_chunks.py  load_data.py  tag_entities.py
tests/: eval.py
utils/: chunk.py
